# sediment

./: .gitignore  .pre-commit-config.yaml  BLOCKER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-ADAPTERS  README.md  README.zh.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_proposal.md  bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  ext-release.yml  release.yml
docs/: developing.md  index.md  install.md  privacy.md
docs/adapters/: anthropic_proxy.md  browser_ext.md  chatgpt_history.md  claude_ai.md  claude_code.md  cursor.md  file_watcher.md  openai_proxy.md
docs/decisions/: 001-review-calibration-item.md
docs/launch/: show_hn.md  zh_community.md
pke/: __init__.py  app.py  operations.py
pke-ext/: README.md  background.js  content-isolated.js  content-main.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
pke/adapters/: __init__.py  anthropic_proxy.py  base.py  browser_ext_endpoint.py  chatgpt_history.py  claude_ai_history.py  claude_code_hook.py  claude_code_tailer.py  cursor.py  file_offsets.py  file_watcher.py  manual_cli.py  openai_proxy.py  registry.py  runner.py  tail_watcher.py
pke/cli/: main.py
pke/config/: __init__.py  defaults.toml  paths.py  settings.py
pke/db/: __init__.py  migrate.py  sqlite.py
pke/evidence/: __init__.py  ingest.py  models.py  queue.py  redact.py  store.py
pke/extraction/: __init__.py  budget.py  cache.py  llm_client.py  runner.py  schema.py
pke/graph/: __init__.py  edges.py  kuzu_store.py  schema.py  skill_node.py  topic_discovery.py  traversal.py
pke/identity/: __init__.py  alias.py  ann_index.py  audit_reasons.py  batch_cluster.py  denstream_online.py  embedder.py  resolver.py
pke/intervention/: __init__.py  decider.py  pre_ai_inject.py  prompt_synth.py  skill_resolver.py  state.py  strength.py  toast.py
pke/maintenance/: __init__.py  locks.py  scheduler.py  service.py
pke/mastery/: __init__.py  bands.py  calibration.py  fsrs.py  hlr.py  selector.py  spreading.py  state.py
pke/quality/: __init__.py  llm_log.py  metrics.py
pke/review/: __init__.py  code_exec.py  feedback.py  grader.py  item_gen.py  session.py
pke/testing/: __init__.py  fixtures.py
pke/tui/: __init__.py  app.py  service.py
pke/web/: __init__.py  deps.py  main.py
scripts/: build_tailwind.sh  dev_seed.py  install_claude_code_hook.py  package_ext.sh  smoke_test_llm.py  verify_acceptance.py
tests/: conftest.py
tests/integration/: test_admin_dashboard.py  test_browser_ext_endpoint.py  test_intervention_api.py  test_intervention_skill_resolution.py  test_pipeline.py  test_review_per_skill.py  test_skills_page.py
tests/unit/: test_evidence.py  (+19 more)
(+81 files in other folders)
