[project]
name = "pke"
version = "0.1.0"
description = "Personal Knowledge Engine - close the loop on AI-assisted work."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "PKE contributors" }]
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.29,<0.32",
  "httpx>=0.27,<0.29",
  "starlette>=0.36,<0.42",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9",
  "anyio>=4.3,<5",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "tomli-w>=1.0",
  "typer>=0.12,<0.14",
  "textual>=0.40,<0.80",
  "rich>=13.7,<14",
  "kuzu>=0.4,<0.8",
  "sqlite-utils>=3.36,<4",
  "sentence-transformers>=3.0,<4",
  "torch>=2.2,<2.6",
  "hnswlib>=0.8.0,<0.9",
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.4,<2",
  "igraph>=0.11,<0.12",
  "river>=0.21,<0.22",
  "bertopic>=0.16,<0.17",
  "fsrs>=4,<5",
  "anthropic>=0.34,<0.40",
  "openai>=1.40,<2",
  "watchdog>=4.0,<5",
  "orjson>=3.10,<4",
  "structlog>=24.1,<25",
  "platformdirs>=4.2,<5",
  "tenacity>=8.2,<10",
  "apscheduler>=3.11.2",
]

[project.optional-dependencies]
local-llm = [
    "llama-cpp-python>=0.3",
]
distill = ["sentence-transformers[train]>=3.0"]
dev = [
  "pytest>=8.1,<9",
  "pytest-asyncio>=0.23,<0.25",
  "pytest-cov>=5.0",
  "hypothesis>=6.100,<7",
  "httpx>=0.27",
  "ruff>=0.5,<0.8",
  "mypy>=1.10,<2",
  "types-toml",
  "pre-commit>=3.7",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
pke = "pke.cli.main:app"
pke-claude-code-hook = "pke.adapters.claude_code_hook:hook_main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pke"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF", "ASYNC", "TID", "PT", "D"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D203",
  "D213",
  "PLR0913",
  "PLR0912",
  "PLR0915",
  "PLR2004",
  "PLC0415",
  "E501",
  "RUF012",
  "SIM108",
  "PT001",
  "PT011",
  "UP035",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_any_generics = true
ignore_missing_imports = true
plugins = []
disable_error_code = [
  "untyped-decorator",
  "no-untyped-def",
  "misc",
  "attr-defined",
  "union-attr",
  "index",
  "no-any-return",
  "unreachable",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "property: property-based tests",
  "perf: performance checks",
  "e2e: end-to-end tests",
]
filterwarnings = ["error"]

[dependency-groups]
dev = []
